--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@heroicons/react": "^2.2.0",
+    "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "@react-icons/all-files": "^4.1.0",
+    "framer-motion": "^12.23.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-parallax-tilt": "^1.7.300",
     "react-router-dom": "^7.6.3",
     "react-select": "^5.10.1"
   },
