--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^7.2.0",
     "@mui/x-date-pickers": "^8.9.0",
     "@react-icons/all-files": "^4.1.0",
+    "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.0",
     "lucide-react": "^0.525.0",
