--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
   "rewrites": [
-    {
-      "source": "/api/:path*",
-      "destination": "https://society-services-backend.onrender.com/api/:path*"
-    }
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
