--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.300",
     "react-router-dom": "^7.6.3",
-    "react-select": "^5.10.1"
+    "react-select": "^5.10.1",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
