--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-parallax-tilt": "^1.7.300",
     "react-router-dom": "^7.6.3",
     "react-select": "^5.10.1",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "recharts": "^3.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
